# aio-logstash

./: LICENSE  README.md  dev-requirements.txt  pyproject.toml  setup.py
.circleci/: config.yml
aio_logstash/: __init__.py  constants.py  formatter.py  handler.py
tests/: conftest.py  test.py  test_general.py
