[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "aio_logstash"
dist-name = "aio-logstash"
description-file = "README.md"
author = "Sina Khorami"
author-email = "sinakhorami94@gmail.com"
home-page = "https://github.com/SinaKhorami/aio-logstash"
keywords = "asyncio logstash logger"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
]
requires-python = ">=3.7"
